@@ -1,3 +1,7 @@
+2007-02-26  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimp-transform-region.c: added more const qualifiers.
+
 2007-02-25  Marco Ciampa  <ciampix@libero.it>
 
 	* authors.xml: added italian contributor
